FIX Remove padding to fix checkbox alignment in bulk management (#159)

--- a/bulkManager/css/GridFieldBulkManager.scss
+++ b/bulkManager/css/GridFieldBulkManager.scss
@@ -58,7 +58,6 @@
     .col-bulkSelect
     {
       width: 25px;
-      padding: 0 10px;
       text-align: center;
     }
 
